Fix text alignment issues with dir='rtl' elements.
This is caused by reboot.scss setting text-align: left on the body
element.

--- a/scss/theme/_home.scss
+++ b/scss/theme/_home.scss
@@ -4,25 +4,11 @@
   display: block;
 }
 
-#home #primary,
-#exhibit-home-primary {
-  //padding: 0;
-  //margin: -30px 0 0 0;
-  //max-width: 1170px;
-  //width: calc(100% - 298px);
-}
-
 .homepage-text,
 #exhibit-home-primary .homepage-text {
   color: var(--colorTitle);
   font-size: $font-size-lg;
   line-height: 1.4;
-  //margin: -30px 0 20px 0;
-  //max-width: 850px;
-}
-
-.homepage-text {
-  //margin: 0 0 20px 0;
 }
 
 .homepage-project {
@@ -32,7 +18,6 @@
 
 #home .related-chapters-box {
   display: block;
-  //margin-bottom: 75px;
   @include clearfix();
 }
 
